--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.3.1"
+  },
+  "scripts":{
+    "dev": "tailwindcss -i ./src/styles/style.css -o ./public/base.css --watch"
   }
 }
