--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "tailwindcss": "^3.3.1"
   },
   "scripts": {
-    "dev": "tailwindcss -i ./src/style.css -o ./styles/base.css --watch"
+    "dev": "tailwindcss -i ./src/input.css -o ./public/styles/output.css --watch"
   }
 }
