--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "4.0",
   "main": "index.html",
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "tailwindcss": "^3.3.1"
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1",
+    "vite": "^4.3.3"
   },
   "scripts": {
-    "dev": "tailwindcss -i ./public/styles/input.css -o ./public/styles/base.css --watch"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
