--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "chart.js": "^4.3.0",
+    "json-to-csv-export": "^2.1.1"
   }
 }
