--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "chart.js": "^4.3.0",
-    "json-to-csv-export": "^2.1.1",
-    "jspdf": "^2.5.1"
+    "json-to-csv-export": "^2.1.1"
   }
 }
